# mcp-steam

./: .copier-answers.yml  .gitignore  LICENSE  README.md  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/guides/: steam-api-endpoints-research.md
scripts/: check-version-bump.sh
src/steam_mcp/: __init__.py  auth.py  client.py  formatting.py  server.py  validation.py
tests/: conftest.py  test_client.py  test_client_errors.py  test_formatting.py  test_server.py  test_validation.py
