[project]
name = "mcp-steam"
version = "0.1.0"
description = "MCP server for Steam gaming library, achievements, stats, and store search"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Matthew O'Brien", email = "obrien.mlotwis@gmail.com" }
]
requires-python = ">=3.14"
keywords = ["mcp", "steam", "gaming", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "mcp>=1.27.0,<2",
    "httpx>=0.28.0",
]

[project.urls]
Repository = "https://github.com/obrien-matthew/mcp-steam"
Issues = "https://github.com/obrien-matthew/mcp-steam/issues"

[tool.uv.build-backend]
module-name = "steam_mcp"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pyright>=1.1.400",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[project.scripts]
mcp-steam = "steam_mcp:main"
